--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 </div>
 
 
+<!--Filtro Director-->
 <section>
 <select name="directors" id="director-select">
     <option value="filter-directors">Filter by Director</option>
@@ -41,6 +42,7 @@
 </select>
 </section>
 
+<!--Orden A-Z, Z-A-->
 <section>
 <select name="orderAlpha" id="alpha-select" placeholder="Order By">
 <option value="A-Z">Order By (A-Z)</option>
@@ -48,10 +50,22 @@
 </select>
 </section>
 
+<!--Search-->
 <section>
   <input type="text" id="search-film" class="search" placeholder="Search Film" maxlength="35" >  
 </section>
 </main>
+
+<!--RT_SCORE-->
+<section>
+  <select name="score" id="select-score">
+  <option value="score-average" id="good">Score</option>
+  <option value="good">Good</option>
+  <option value="regular">Regular</option>
+  <option value="bad">Bad</option>
+
+  </select>
+  </section>
 
 <!--Container of cards-->
     <div class="root" id="root">
