--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <script src="main.js" type="module"></script>
 <footer>
   <div class = "footer">
-    <h6>Copyright © Gisbel Contreras and Paula Rosales</h6>
+    <h6>Copyright © 2022 Gisbel Contreras and Paula Rosales</h6>
   </div>
 </footer>
   </body>
